// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/Spacing Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="spacer"
    >
      <div
        className="spacer is-visible"
        style={
          Object {
            "display": "inline-block",
            "height": 0,
            "width": 0,
          }
        }
      />
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--spacing-none)
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Spacing Sizes 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": "auto",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="spacer"
    >
      <div
        className="spacer is-visible"
        style={
          Object {
            "display": "inline-block",
            "height": 0,
            "width": 0,
          }
        }
      />
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--spacing-none)
      </span>
      <span
        className="label"
      >
        0
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="spacer"
    >
      <div
        className="spacer is-visible"
        style={
          Object {
            "display": "inline-block",
            "height": 5,
            "width": 5,
          }
        }
      />
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--spacing-xs)
      </span>
      <span
        className="label"
      >
        5
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="spacer"
    >
      <div
        className="spacer is-visible"
        style={
          Object {
            "display": "inline-block",
            "height": 15,
            "width": 15,
          }
        }
      />
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--spacing-sm)
      </span>
      <span
        className="label"
      >
        15
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="spacer"
    >
      <div
        className="spacer is-visible"
        style={
          Object {
            "display": "inline-block",
            "height": 20,
            "width": 20,
          }
        }
      />
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--spacing-md)
      </span>
      <span
        className="label"
      >
        20
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="spacer"
    >
      <div
        className="spacer is-visible"
        style={
          Object {
            "display": "inline-block",
            "height": 40,
            "width": 40,
          }
        }
      />
    </div>
    <div
      className="description"
    >
      <span
        className="label"
      >
        var(--spacing-lg)
      </span>
      <span
        className="label"
      >
        40
      </span>
    </div>
  </div>
</div>
`;
